force-app/main/default/objects/Movie__c/fields/Actor_Count__c.field-meta.xml
<CustomField>
    <fullName>Actor_Count__c</fullName>
    <label>Actor Count</label>
    <summaryForeignKey>Actor__c.Movie__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>