force-app/main/default/objects/Movie__c/fields/Oscars__c.field-meta.xml
<CustomField>
    <fullName>Oscars__c</fullName>
    <label>Oscars</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>